New comment options.

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
       <h1 class="vz-page__header">comments</h1>
       <section class="ks-section">
         <div class="vz-container--narrow">
+          <h3>Tail option</h3>
           <div class="vz-comment vz-comment--tail-left">
             <div class="vz-comment__body">
               <p>Lorem ipsum dolor sit amet</p>
@@ -95,6 +96,47 @@
           <div class="vz-comment vz-comment--tail-right">
             <div class="vz-comment__body">
               <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="vz-comment__actions">
+              <div class="vz-link vz-button--micro">remove comment</div>
+            </div>
+          </div>
+          <h3>No tail option</h3>
+          <div class="vz-comment vz-comment--notail">
+            <div class="vz-comment__body">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="vz-comment__actions">
+              <div class="vz-link vz-button--micro">remove comment</div>
+            </div>
+          </div>
+          <div class="vz-comment vz-comment--notail">
+            <div class="vz-comment__body">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="vz-comment__actions">
+              <div class="vz-link vz-button--micro">remove comment</div>
+            </div>
+          </div>
+          <div class="vz-comment vz-comment--notail">
+            <div class="vz-comment__body">
+              <p>Lorem ipsum dolor sit amet</p>
+            </div>
+            <div class="vz-comment__actions">
+              <div class="vz-link vz-button--micro">remove comment</div>
+            </div>
+          </div>
+          <div class="vz-comment vz-comment--notail">
+            <div class="vz-comment__body">
+              <p>Ut esse mollit est dolore reprehenderit voluptate ullamco laboris exercitation eiusmod fugiat dolore.</p>
+            </div>
+            <div class="vz-comment__actions">
+              <div class="vz-link vz-button--micro">remove comment</div>
+            </div>
+          </div>
+          <div class="vz-comment vz-comment--notail vz-comment--is-active">
+            <div class="vz-comment__body">
+              <p>Ut esse mollit est dolore reprehenderit voluptate ullamco laboris exercitation eiusmod fugiat dolore.</p>
             </div>
             <div class="vz-comment__actions">
               <div class="vz-link vz-button--micro">remove comment</div>
