loading / progress bar.

--- a/public/index.html
+++ b/public/index.html
@@ -650,9 +650,16 @@
           </div>
         </div>
       </section>
+
+      <h1 class="vz-page__header">progress bar</h1>
+      <div class="ks-section">
+        <div class="ks-section__container">
+          <h3>loading</h3>
+          <img src="https://picsum.photos/250/180/?random" alt="">
+          <div class="vz-progress-bar"></div>
+        </div>
+      </div>
   </div>
-
-
 
   <script src="main.js"></script>
 
