--- a/public/index.html
+++ b/public/index.html
@@ -654,6 +654,11 @@
       <h1 class="vz-page__header">progress bar</h1>
       <div class="ks-section">
         <div class="ks-section__container">
+          <h3>progress bar</h3>
+          <img src="https://picsum.photos/250/180/?random" alt="">
+          <div class="vz-progress-bar vz-progress-bar--loading"></div>
+        </div>
+        <div class="ks-section__container">
           <h3>loading</h3>
           <img src="https://picsum.photos/250/180/?random" alt="">
           <div class="vz-progress-bar"></div>
