progress bar animation.

--- a/public/index.html
+++ b/public/index.html
@@ -661,7 +661,7 @@
         <div class="ks-section__container">
           <h3>loading</h3>
           <img src="https://picsum.photos/250/180/?random" alt="">
-          <div class="vz-progress-bar"></div>
+          <div class="vz-progress-bar vz-progress-bar--download"></div>
         </div>
       </div>
   </div>
