how to start section.

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,17 @@
     </div>
 
     <div class="vz-layout__content">
+      <!-- <div class="ks-section">
+        <h1 class="vz-page__header">how to start</h1>
+        <div class="ks-section__container">
+            <p>Import the css file from the link below for specific version:</p>
+            <p class="ks-code"><a href="https://unpkg.com/@vzlab/style@2.2.1/dist/main.css" target="_blank">https://unpkg.com/@vzlab/style@2.2.1/dist/main.css</a></p>
+        </div>
+        <div class="ks-section__container">
+            <p>Or if you want the latest version you can get it like so:</p>
+            <p class="ks-code"><a href="https://unpkg.com/@vzlab/style@latest/dist/main.css" target="_blank">https://unpkg.com/@vzlab/style@latest/dist/main.css</a></p>
+        </div>
+      </div> -->
       <h1 class="vz-page__header">comments</h1>
       <section class="ks-section">
         <div class="vz-container--narrow">
