select multiple itens style.

--- a/public/index.html
+++ b/public/index.html
@@ -313,6 +313,18 @@
                 <option value="1">Selectable 1</option>
                 <option value="2">Selectable 2</option>
               </select>
+              <select class="vz-form-input--select" name="select" multiple="yes">
+                <option value="0" disabled>Unselectable</option>
+                <option value="1">Selectable 1</option>
+                <option value="2">Selectable 2</option>
+                <option value="3">Selectable 3</option>
+                <option value="4">Selectable 4</option>
+                <option value="5">Selectable 5</option>
+                <option value="6">Selectable 6</option>
+                <option value="7">Selectable 7</option>
+                <option value="8">Selectable 8</option>
+                <option value="10">Selectable 10</option>
+              </select>
             </div>
           </div>
           <div class="vz-form-group">
