Using ionicons script.

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600">
   <link rel="stylesheet" type="text/css" href="main.css">
+
+  <script src="https://unpkg.com/ionicons@4.5.0/dist/ionicons.js"></script>
 </head>
 <body>
 
@@ -205,7 +207,8 @@
 
         <div class="vz-flash-container">
           <div class="vz-flash-container__indicator vz-flash-container__indicator--ok vz-flash-use-icon">
-              <img class="vz-flash-use-icon__img" src="assets/icons/_ionicons_svg_md-checkmark-circle.svg" alt="">
+              <ion-icon name="checkmark-circle" class="vz-flash-use-icon__img"></ion-icon>
+              <!-- <img class="vz-flash-use-icon__img" src="assets/icons/_ionicons_svg_md-checkmark-circle.svg" alt=""> -->
           </div>
           <div class="vz-flash-container__flash">
             <p>Success, my dudes.</p>
@@ -214,7 +217,7 @@
 
         <div class="vz-flash-container">
           <div class="vz-flash-container__indicator vz-flash-container__indicator--wrong vz-flash-use-icon">
-            <img class="vz-flash-use-icon__img" src="assets/icons/_ionicons_svg_md-alert.svg" alt="">
+            <ion-icon name="alert" class="vz-flash-use-icon__img"></ion-icon>
           </div>
           <div class="vz-flash-container__flash">
             <p>Something went wrong. Action needed.</p>
@@ -223,7 +226,7 @@
 
         <div class="vz-flash-container">
           <div class="vz-flash-container__indicator vz-flash-container__indicator--warning vz-flash-use-icon">
-            <img class="vz-flash-use-icon__img" src="assets/icons/_ionicons_svg_md-warning.svg" alt="">
+            <ion-icon name="warning" class="vz-flash-use-icon__img"></ion-icon>
           </div>
           <div class="vz-flash-container__flash">
             <p>This is a warning and I'm spelling it out for you.</p>
@@ -232,7 +235,7 @@
 
         <div class="vz-flash-container">
           <div class="vz-flash-container__indicator vz-flash-container__indicator--info vz-flash-use-icon">
-            <img class="vz-flash-use-icon__img" src="assets/icons/_ionicons_svg_md-information-circle.svg" alt="">
+            <ion-icon name="information-circle" class="vz-flash-use-icon__img"></ion-icon>
           </div>
           <div class="vz-flash-container__flash">
             <p>A scheduled thing will happen this afternoon. No action is needded.</p>
