Basic menu style.

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,36 @@
     <div class="vz-layout__menu">
       <div class="vz-sidebar">
         <div class="vz-sidebar__options">
-          options
+          <nav class="vz-menu">
+            <a href="#" class="vz-menu__item vz-menu__item--active">
+              <div class="vz-menu__item-icon">
+                <ion-icon name="home"></ion-icon>
+              </div>
+              <p>home</p>
+            </a>
+            <a href="#" class="vz-menu__item">
+              <div class="vz-menu__item-icon">
+                <ion-icon name="bulb"></ion-icon>
+              </div>
+              <p>ideias</p>
+            </a>
+            <a href="#" class="vz-menu__item">
+              <div class="vz-menu__item-icon">
+                <ion-icon name="star"></ion-icon>
+              </div>
+              <p>produção</p>
+            </a>
+            <div class="vz-menu__item-submenu">
+              <a href="#">aprovados</a>
+              <a href="#">reprovados</a>
+            </div>
+            <a href="#" class="vz-menu__item">
+              <div class="vz-menu__item-icon">
+                <ion-icon name="stats"></ion-icon>
+              </div>
+              <p>status</p>
+            </a>
+          </nav>
         </div>
 
         <div class="vz-sidebar__user">
