--- a/public/index.html
+++ b/public/index.html
@@ -37,15 +37,18 @@
               </div>
               <p>ideias</p>
             </a>
-            <a href="#" class="vz-menu__item">
-              <div class="vz-menu__item-icon">
-                <ion-icon name="star"></ion-icon>
+            <div class="vz-menu__item--collapsable">
+              <a href="#" class="vz-menu__item">
+                <div class="vz-menu__item-icon">
+                  <ion-icon name="star"></ion-icon>
+                </div>
+                <p>produção</p>
+              </a>
+
+              <div class="vz-menu__item-submenu">
+                <a href="#">aprovados</a>
+                <a href="#">reprovados</a>
               </div>
-              <p>produção</p>
-            </a>
-            <div class="vz-menu__item-submenu">
-              <a href="#">aprovados</a>
-              <a href="#">reprovados</a>
             </div>
             <a href="#" class="vz-menu__item">
               <div class="vz-menu__item-icon">
