--- a/public/index.html
+++ b/public/index.html
@@ -25,37 +25,56 @@
       <div class="vz-sidebar">
         <div class="vz-sidebar__options">
           <nav class="vz-menu">
-            <a href="#" class="vz-menu__item vz-menu__item--active">
-              <div class="vz-menu__item-icon">
-                <ion-icon name="home"></ion-icon>
-              </div>
-              <p>home</p>
-            </a>
-            <a href="#" class="vz-menu__item">
-              <div class="vz-menu__item-icon">
-                <ion-icon name="bulb"></ion-icon>
-              </div>
-              <p>ideias</p>
-            </a>
             <div class="vz-menu__item--collapsable">
-              <a href="#" class="vz-menu__item">
+
+              <input type="checkbox" name="collapsable-01" id="collapsable-01">
+              <label for="collapsable-01" class="vz-menu__item vz-menu__item--active">
+                <div class="vz-menu__item-icon">
+                  <ion-icon name="home"></ion-icon>
+                </div>
+                <p>home</p>
+              </label>
+            </div>
+
+            <div class="vz-menu__item--collapsable">
+              <input type="checkbox" name="collapsable-02" id="collapsable-02">
+              <label for="collapsable-02" href="#" class="vz-menu__item">
+                <div class="vz-menu__item-icon">
+                  <ion-icon name="bulb"></ion-icon>
+                </div>
+                <p>ideias</p>
+              </label>
+            </div>
+
+            <div class="vz-menu__item--collapsable">
+              <input type="checkbox" name="collapsable-03" id="collapsable-03">
+              <label for="collapsable-03" class="vz-menu__item">
                 <div class="vz-menu__item-icon">
                   <ion-icon name="star"></ion-icon>
                 </div>
                 <p>produção</p>
-              </a>
+              </label>
 
               <div class="vz-menu__item-submenu">
                 <a href="#">aprovados</a>
                 <a href="#">reprovados</a>
               </div>
             </div>
-            <a href="#" class="vz-menu__item">
-              <div class="vz-menu__item-icon">
-                <ion-icon name="stats"></ion-icon>
+
+            <div class="vz-menu__item--collapsable">
+              <input type="checkbox" name="collapsable-04" id="collapsable-04">
+              <label for="collapsable-04" class="vz-menu__item">
+                <div class="vz-menu__item-icon">
+                  <ion-icon name="stats"></ion-icon>
+                </div>
+                <p>status</p>
+              </label>
+
+              <div class="vz-menu__item-submenu">
+                <a href="#">regional</a>
+                <a href="#">internacional</a>
               </div>
-              <p>status</p>
-            </a>
+            </div>
           </nav>
         </div>
 
