--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
 
         <div class="vz-flash">
           <div class="vz-flash__indicator vz-flash__indicator--ok vz-flash__indicator--use-icon">
-              <ion-icon name="checkmark-circle" class="icon"></ion-icon>
+              <ion-icon name="checkmark-circle" class="vz-flash__indicator-icon"></ion-icon>
           </div>
           <div class="vz-flash__content vz-flash__content--ok">
             <p>Success, my dudes.</p>
@@ -268,7 +268,7 @@
 
         <div class="vz-flash">
           <div class="vz-flash__indicator vz-flash__indicator--wrong vz-flash__indicator--use-icon">
-            <ion-icon name="alert" class="icon"></ion-icon>
+            <ion-icon name="alert" class="vz-flash__indicator-icon"></ion-icon>
           </div>
           <div class="vz-flash__content vz-flash__content--wrong">
             <p>Something went wrong. Action needed.</p>
@@ -277,7 +277,7 @@
 
         <div class="vz-flash">
           <div class="vz-flash__indicator vz-flash__indicator--warning vz-flash__indicator--use-icon">
-            <ion-icon name="warning" class="icon"></ion-icon>
+            <ion-icon name="warning" class="vz-flash__indicator-icon"></ion-icon>
           </div>
           <div class="vz-flash__content vz-flash__content--warning">
             <p>This is a warning and I'm spelling it out for you.</p>
@@ -286,7 +286,7 @@
 
         <div class="vz-flash">
           <div class="vz-flash__indicator vz-flash__indicator--info vz-flash__indicator--use-icon">
-            <ion-icon name="information-circle" class="icon"></ion-icon>
+            <ion-icon name="information-circle" class="vz-flash__indicator-icon"></ion-icon>
           </div>
           <div class="vz-flash__content vz-flash__content--info">
             <p>A scheduled thing will happen this afternoon. No action is needded.</p>
