fixed links as buttons.

--- a/public/index.html
+++ b/public/index.html
@@ -233,13 +233,21 @@
         <button class="vz-button vz-button--no vz-button--small">NO</button>
         <button class="vz-button vz-button--danger vz-button--small">DANGER</button>
 
+        <h2>Links as buttons</h2>
+        <a class="vz-button" href="#" role="button">DEFAULT</a>
+        <a class="vz-button vz-button--primary" href="#" role="button">PRIMARY</a>
+        <a class="vz-button vz-button--secondary" href="#" role="button">SECONDARY</a>
+        <a class="vz-button vz-button--yes" href="#" role="button">YES</a>
+        <a class="vz-button vz-button--no" href="#" role="button">NO</a>
+        <a class="vz-button vz-button--danger" href="#" role="button">DANGER</a>
+
         <h2>Links</h2>
-        <button class="vz-link">DEFAULT</button>
-        <button class="vz-link vz-link--primary">PRIMARY</button>
-        <button class="vz-link vz-link--secondary">SECONDARY</button>
-        <button class="vz-link vz-link--yes">YES</button>
-        <button class="vz-link vz-link--no">NO</button>
-        <button class="vz-link vz-link--danger">DANGER</button>
+        <a class="vz-link" role="link">DEFAULT</a>
+        <a class="vz-link vz-link--primary" role="link">PRIMARY</a>
+        <a class="vz-link vz-link--secondary" role="link">SECONDARY</a>
+        <a class="vz-link vz-link--yes" role="link">YES</a>
+        <a class="vz-link vz-link--no" role="link">NO</a>
+        <a class="vz-link vz-link--danger" role="link">DANGER</a>
 
         <h2>Block</h2>
         <button class="vz-button vz-button--full-width">DEFAULT</button>
