--- a/public/index.html
+++ b/public/index.html
@@ -242,12 +242,12 @@
         <a class="vz-button vz-button--danger" href="#" role="button">DANGER</a>
 
         <h2>Links</h2>
-        <a class="vz-link" role="link">DEFAULT</a>
-        <a class="vz-link vz-link--primary" role="link">PRIMARY</a>
-        <a class="vz-link vz-link--secondary" role="link">SECONDARY</a>
-        <a class="vz-link vz-link--yes" role="link">YES</a>
-        <a class="vz-link vz-link--no" role="link">NO</a>
-        <a class="vz-link vz-link--danger" role="link">DANGER</a>
+        <a class="vz-button vz-button--link" role="link">DEFAULT</a>
+        <a class="vz-button vz-button--link-primary vz-button--link" role="link">PRIMARY</a>
+        <a class="vz-button vz-button--link-secondary vz-button--link" role="link">SECONDARY</a>
+        <a class="vz-button vz-button--link-yes vz-button--link" role="link">YES</a>
+        <a class="vz-button vz-button--link-no vz-button--link" role="link">NO</a>
+        <a class="vz-button vz-button--link-danger vz-button--link" role="link">DANGER</a>
 
         <h2>Block</h2>
         <button class="vz-button vz-button--full-width">DEFAULT</button>
