Quick start section backbone.

--- a/public/index.html
+++ b/public/index.html
@@ -110,14 +110,24 @@
 
     <div class="vz-layout__content">
       <!-- <div class="ks-section">
-        <h1 class="vz-page__header">how to start</h1>
+        <h1 class="vz-page__header">Quick start</h1>
         <div class="ks-section__container">
-            <p>Import the css file from the link below for specific version:</p>
-            <p class="ks-code"><a href="https://unpkg.com/@vzlab/style@2.2.1/dist/main.css" target="_blank">https://unpkg.com/@vzlab/style@2.2.1/dist/main.css</a></p>
-        </div>
-        <div class="ks-section__container">
-            <p>Or if you want the latest version you can get it like so:</p>
-            <p class="ks-code"><a href="https://unpkg.com/@vzlab/style@latest/dist/main.css" target="_blank">https://unpkg.com/@vzlab/style@latest/dist/main.css</a></p>
+          <p>Copy-paste the stylesheet <code class="ks-highlighter">&lt;link></code> into your <code class="ks-highlighter">&lt;head></code> before all other stylesheets to load our CSS.</p>
+          <div class="ks-figure">
+            <pre><code>&lt;<span class="ks-nt">link</span> <span class="ks-na">rel=</span><span class="ks-s">"stylesheet"</span> <span class="ks-na">type=</span><span class="ks-s">"text/css"</span> <span class="ks-na">href=</span><span class="ks-s">"https://unpkg.com/@vzlab/style@2.4.2/dist/main.css"</span>></code></pre>
+          </div>
+          <p>You need to import the fonts too:</p>
+          <div class="ks-figure">
+            <pre><code>&lt;<span class="ks-nt">link</span> <span class="ks-na">rel=</span><span class="ks-s">"stylesheet"</span> <span class="ks-na">type=</span><span class="ks-s">"text/css"</span> <span class="ks-na">href=</span><span class="ks-s">"https://fonts.googleapis.com/css?family=Titillium+Web:400,600"</span>></code></pre>
+          </div>
+          <p>We are using Ionicos, so if you want to use the same icons copy-paste <code class="ks-highlighter">&lt;link></code> into your <code class="ks-highlighter">&lt;head></code>:</p>
+          <div class="ks-figure">
+            <pre><code>&lt;<span class="ks-nt">script</span> <span class="ks-s">"text/css"</span> <span class="ks-na">src=</span><span class="ks-s">"https://unpkg.com/ionicons@4.5.0/dist/ionicons.js"</span>>&lt;/<span class="ks-nt">script</span>></code></pre>
+          </div>
+          <p>And if you want to use a Grid system you can use the following:</p>
+          <div class="ks-figure">
+            <pre><code>&lt;<span class="ks-nt">link</span> <span class="ks-na">rel=</span><span class="ks-s">"stylesheet"</span> <span class="ks-na">type=</span><span class="ks-s">"text/css"</span> <span class="ks-na">href=</span><span class="ks-s">"https://unpkg.com/flexboxgrid@6.3.1/dist/flexboxgrid.min.css"</span>></code></pre>
+          </div>
         </div>
       </div> -->
       <h1 class="vz-page__header">comments</h1>
