Form actions container.

--- a/public/index.html
+++ b/public/index.html
@@ -365,7 +365,7 @@
 
       <h1 class="vz-page__header">form</h1>
       <section class="ks-section">
-        <form action="">
+        <form class="vz-form">
           <div class="row">
             <div class="col-xs-3">
               <div class="vz-form-group vz-form-group--valid">
@@ -427,9 +427,6 @@
             </div>
           </div>
 
-          <div class="row">
-
-          </div>
           <div class="vz-form-group">
             <label>Checkbox</label>
             <div class="vz-form-group__control">
@@ -476,9 +473,10 @@
               </div>
             </div>
           </div>
-
-          <button class="vz-button vz-button--primary" type="button">atualizar</button>
-          <button class="vz-button vz-button--secondary" type="button">enviar</button>
+          <div class="vz-form__actions">
+            <button class="vz-button vz-button--primary" type="button">atualizar</button>
+            <button class="vz-button vz-button--secondary" type="button">enviar</button>
+          </div>
         </form>
       </section>
 
