--- a/public/index.html
+++ b/public/index.html
@@ -259,6 +259,14 @@
         <a class="vz-button vz-button--link-no vz-button--link" role="link">NO</a>
         <a class="vz-button vz-button--link-danger vz-button--link" role="link">DANGER</a>
 
+        <h2>Outline</h2>
+        <a class="vz-button vz-button--outline" role="link">DEFAULT</a>
+        <a class="vz-button vz-button--outline-primary vz-button--outline" role="link">PRIMARY</a>
+        <a class="vz-button vz-button--outline-secondary vz-button--outline" role="link">SECONDARY</a>
+        <a class="vz-button vz-button--outline-yes vz-button--outline" role="link">YES</a>
+        <a class="vz-button vz-button--outline-no vz-button--outline" role="link">NO</a>
+        <a class="vz-button vz-button--outline-danger vz-button--outline" role="link">DANGER</a>
+
         <h2>Block</h2>
         <button class="vz-button vz-button--full-width">DEFAULT</button>
         <button class="vz-button vz-button--primary vz-button--full-width">PRIMARY</button>
